# fintech-ai-platform

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  REFACTOR.md  ROADMAP.md  compose.prod.yaml  compose.staging.yaml  process-compose.yaml
.claude/: settings.json
.docs/: CLAUDE.md  (+1 more)
backend-service/: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend-service/alembic/: db_push.py  env.py
backend-service/alembic/init/: init.sql
backend-service/alembic/versions/: 0001_add_company_id_tenant_isolation.py  0002_nav_idempotency_key.py  0003_watchlist_atch_file.py  0004_research_document.py
backend-service/app/: .env.example  main.py
backend-service/app/clients/doc_search/: doc_search_client.py
backend-service/app/clients/file/: file_service_client.py
backend-service/app/clients/mssql/: mssql_client.py
backend-service/app/core/: config.py  container.py  database.py
backend-service/app/managers/message_queue/: message_consumer_manager.py
backend-service/app/managers/nav/: nav_producer_manager.py
backend-service/app/models/: schema.py
backend-service/app/repositories/message_queue/: message_queue_repository.py
backend-service/app/repositories/nav/: nav_repository.py
backend-service/app/repositories/portfolio/: portfolio_repository.py
backend-service/app/repositories/research_document/: research_document_repository.py
backend-service/app/repositories/watchlist/: watchlist_repository.py
backend-service/app/routers/nav/: nav_router.py
backend-service/app/routers/portfolio/: portfolio_router.py
backend-service/app/routers/research_document/: research_document_router.py
backend-service/app/routers/watchlist/: watchlist_router.py
backend-service/app/schemas/file/: file_schema.py
backend-service/app/schemas/nav/: nav_schema.py
backend-service/app/schemas/portfolio/: portfolio_schema.py
backend-service/app/schemas/research_document/: research_document_schema.py
backend-service/app/schemas/watchlist/: watchlist_schema.py
backend-service/app/services/message_queue/: message_queue_service.py
backend-service/app/services/nav/: nav_service.py
backend-service/app/services/portfolio/: portfolio_service.py
backend-service/app/services/research_document/: research_document_service.py
backend-service/app/services/watchlist/: watchlist_service.py
backend-service/app/utils/common/: database_utils.py
devactivity-service/: Dockerfile  README.md  pyproject.toml
devactivity-service/alembic/: db_push.py  env.py
devactivity-service/app/: .env.example  main.py
devactivity-service/app/clients/llm/: llm_client.py
devactivity-service/app/clients/mail/: mail_client.py
devactivity-service/app/clients/mcp/: mcp_agent.py  mcp_auth.py  mcp_client.py  mcp_prompt.py
devactivity-service/app/clients/mssql/: mssql_client.py
devactivity-service/app/core/: authorization.py  config.py  container.py  database.py  exceptions.py
devactivity-service/app/managers/: scheduler_manager.py
devactivity-service/app/models/: schema.py
devactivity-service/app/repositories/scheduler/: scheduler_repository.py
devactivity-service/app/routers/chat/: chat_router.py
devactivity-service/app/routers/scheduler/: scheduler_router.py
devactivity-service/app/schemas/: common_schema.py
devactivity-service/app/schemas/chat/: chat_schema.py
devactivity-service/app/schemas/report/: report_schema.py
devactivity-service/app/schemas/scheduler/: scheduler_schema.py
devactivity-service/app/services/chat/: portfolio_chat_service.py
devactivity-service/app/services/report/: activity_report_service.py
devactivity-service/app/services/scheduler/: scheduler_service.py
devactivity-service/app/utils/chat/: chat_utils.py
devactivity-service/app/utils/common/: devextreme_utils.py
devactivity-service/app/utils/report/: report_utils.py
devactivity-service/scripts/: verify_activity_report.py  verify_scheduler_gating.py
doc-search-mcp-service/: .gitignore  README.md  pyproject.toml
doc-search-mcp-service/app/: .env.example  main.py
doc-search-mcp-service/app/clients/bm25/: bm25_client.py  finance.dict
doc-search-mcp-service/app/clients/embedding/: embedding_client.py
doc-search-mcp-service/app/clients/milvus/: milvus_client.py
doc-search-mcp-service/app/clients/parser/: parser.py
doc-search-mcp-service/app/clients/postgres/: postgres_client.py
doc-search-mcp-service/app/clients/redis/: redis_client.py
doc-search-mcp-service/app/clients/reranker/: reranker_client.py
doc-search-mcp-service/app/core/: config.py  container.py  middlewares.py  security.py  service_guard.py
doc-search-mcp-service/app/repositories/vector_search/: vector_search_milvus_repository.py
doc-search-mcp-service/app/repositories/workspace/: workspace_chunk_repository.py
doc-search-mcp-service/app/routers/vector_search/: vector_search_router.py
doc-search-mcp-service/app/routers/workspace/: workspace_router.py
doc-search-mcp-service/app/schemas/vector_search/: vector_search_schema.py
doc-search-mcp-service/app/schemas/workspace/: workspace_schema.py
doc-search-mcp-service/app/services/vector_search/: vector_search_service.py
doc-search-mcp-service/app/services/workspace/: workspace_service.py
doc-search-mcp-service/app/utils/common/: few_shot.py
doc-search-mcp-service/app/utils/ingest/: chunking.py
doc-search-mcp-service/app/utils/vector_search/: mock_data.py  score_utils.py
doc-search-mcp-service/tests/: test_chunking.py  test_require_service_token.py
single-agent-service/: README.md  pyproject.toml
single-agent-service/app/: .env.example  main.py
single-agent-service/app/agents/: chat_agent.py
single-agent-service/app/clients/llm/: llm_client.py
single-agent-service/app/clients/mcp/: mcp_auth.py  mcp_client.py
single-agent-service/app/core/: config.py  container.py  middlewares.py
single-agent-service/app/routers/chat/: chat_router.py
template-mcp-service/: README.md  pyproject.toml
template-mcp-service/app/: .env.example  main.py
template-mcp-service/app/core/: config.py  container.py  security.py
(+548 files in other folders)
