[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # 웹 프레임워크
    "dependency-injector~=4.49.0",
    "httpx~=0.28.1",
    "tenacity~=9.0.0",
    "uvicorn[standard]~=0.47.0",
    "fastapi~=0.136.1",
    "pydantic-settings~=2.14.1",
    "pyjwt~=2.12.1",
    # 데이터베이스
    "sqlalchemy~=2.0.49",
    "pyodbc~=5.3.0",
    "alembic[tz]~=1.18.4",
]

[dependency-groups]
# devactivity 특화 — 챗 에이전트(LangGraph 멀티 MCP)
main = [
    "mcp>=1.27,<2",
    "langchain==1.3.4",
    "langgraph==1.2.4",
    "langchain-core==1.4.0",
    "langchain-openai==1.2.2",
    "langchain-mcp-adapters==0.2.2",
    "apscheduler>=3.10,<4",
]
dev = ["ruff~=0.15.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["main", "dev"]
package = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "FAST", "W", "E", "B", "UP"]
ignore = [
    "B008",    # FastAPI Depends 기본값 함수 호출 허용
    "E501",    # 라인 길이 88자 초과 무시 (black 기준)
    "E402",    # 동적 import 허용 (FastAPI lazy loading)
    "FAST002", # 선택적 의존성 타입 어노테이션 무시
]
