# ── [신규 서비스 개발 가이드] pyproject.toml — 의존성·lint 설정 ──────────────────────────
#
# 이 서비스는 신규 에이전트(MCP 소비자) 서비스 개발의 교본이다. single-agent-service/ 를 통째로
# 복사한 뒤 각 파일의 [가이드 N/9] 블록과 README 체크리스트대로 따라가면 새 서비스가 완성된다.
#
# 무엇: uv 가 읽는 의존성·빌드·ruff 설정. name 은 모든 backend 가 "app" 고정 — 서비스 이름은 폴더명으로 구분.
# 복사 후 바꿀 것:
#   - [dependency-groups] main 의 langchain 스택은 에이전트 핵심 — 버전 핀을 타 에이전트 서비스(devactivity·
#     multi-agent)와 맞춘다. DB 가 필요해지면 dependencies 에 pyodbc 추가.
# 의존성 추가 절차: 한 줄 추가 → `uv lock` (uv.lock 갱신) → `uv sync` (.venv 반영). uv.lock 은 커밋 대상.
# 지킬 규칙: ruff 설정(line-length 120, select/ignore)은 전 backend 공통 — 서비스별 변경 금지.
# ──────────────────────────────────────────────────────────────────────────────────────

[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # 웹 프레임워크
    "dependency-injector~=4.49.0",
    "httpx~=0.28.1",
    "uvicorn[standard]~=0.47.0",
    "fastapi~=0.136.1",
    "pydantic-settings~=2.14.1",
    "pyjwt~=2.12.1",
    # 공통 core 템플릿 의존 (exception_handler 가 sqlalchemy 예외 매핑)
    "sqlalchemy~=2.0.49",
]

[dependency-groups]
# 에이전트 — LangGraph create_agent + 멀티 MCP tool 소비
main = [
    "langchain==1.3.4",
    "langgraph==1.2.4",
    "langchain-core==1.4.0",
    "langchain-openai==1.2.2",
    "langchain-mcp-adapters==0.2.2",
]
dev = ["ruff~=0.15.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["main", "dev"]
package = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "FAST", "W", "E", "B", "UP"]
ignore = [
    "B008",    # FastAPI Depends 기본값 함수 호출 허용
    "E501",    # 라인 길이 88자 초과 무시 (black 기준)
    "E402",    # 동적 import 허용 (FastAPI lazy loading)
    "FAST002", # 선택적 의존성 타입 어노테이션 무시
]
